--- a/bddjango/templates/entities/simpleui_change_list_actions.html
+++ b/bddjango/templates/entities/simpleui_change_list_actions.html
@@ -72,11 +72,13 @@
         </ul>
         <div>
 
-            <div>
+            <div class="my_table_title" style="display: flex;">
+
                 <span
                     style="
                         font-weight: 700;
-                        margin:20px 20px 20px 20px;
+                        margin: 5px 20px 20px 20px;
+                        /*margin-top: 10px;*/
                         font-size: 20px!important;
                         color: #666;
                     "
@@ -84,39 +86,38 @@
                     {{ opts.verbose_name_plural }}
                 </span>
 
-                <a href="export_all_excel/" target="_blank">
-                   <button type="button" class="el-button el-button--default el-button--small"
+                <div class="my_buttons" style="margin-left: auto;margin-right: 5px;margin-top: 10px">
+                    <a href="export_all_excel/" target="_blank">
+                       <button type="button" class="el-button el-button--default el-button--small"
 
-                            style="
-                            float: right;
-                            margin-bottom: 10px;
-                            margin-top: 10px;
-                            margin-right: 12px;"
+                                style="
+                                float: right;
+                                margin-right: 5px;"
 
-                           data-name="export_all_excel"><!----><!---->
-                        <span class="fas fa-download"></span>
-                        <span>
-                            全部导出
-                        </span>
-                    </button>
-                </a>
+                               data-name="export_all_excel"><!----><!---->
+                            <span class="fas fa-download"></span>
+                            <span>
+                                全部导出
+                            </span>
+                        </button>
+                    </a>
 
-                <a href="import-csv/">
-                    <button type="button" class="el-button el-button--default el-button--small"
+                    <a href="import-csv/">
+                        <button type="button" class="el-button el-button--default el-button--small"
 
-                            style="
-                            float: right;
-                            margin-bottom: 10px;
-                            margin-top: 10px;
-                            margin-right: 12px;"
+                                style="
+                                float: right;
+                                margin-right: 10px;"
 
-                            data-name="export_as_csv">
-                        <i class="fas fa-upload"></i>
-                        <span>
-                            导入数据
-                        </span>
-                    </button>
-                </a>
+                                data-name="export_as_csv">
+                            <i class="fas fa-upload"></i>
+                            <span>
+                                导入数据
+                            </span>
+                        </button>
+                    </a>
+                </div>
+
 
             </div>
         </div>
@@ -167,28 +168,3 @@
 {% endblock %}
 
 
-
-{#<script>#}
-{#    console.log('自定义actions.html!');#}
-{#    // 解决simpleui显示错误bug的js脚本--丑陋版#}
-{#    setInterval(function() {#}
-{#        // 判断是否选中了checkbox#}
-{#        if ($("#action-toggle").is(":checked")){#}
-{#            // 判断是否全选#}
-{#            if (_action.select_across){#}
-{#                $(".question").hide();#}
-{#                $(".all").show();#}
-{#                $(".clear").show();#}
-{#            }#}
-{#            else{#}
-{#                $(".question").show();#}
-{#            }#}
-{#        }#}
-{#        else{#}
-{#            $(".clear").hide();#}
-{#            $(".all").hide();#}
-{#            $(".question").hide();#}
-{#        }#}
-{##}
-{#    }, 100);#}
-{#</script>#}
