--- a/bddjango/templates/entities/simpleui_change_list.html
+++ b/bddjango/templates/entities/simpleui_change_list.html
@@ -7,55 +7,62 @@
 {% block object-tools %}
     {{ block.super }}
 
-    <div>
-
+    {% if custom_import_and_export_buttons %}
         <div>
-            <span
-                style="
-                    font-weight: 700;
-                    margin:20px 20px 20px 20px;
-                    font-size: 20px!important;
-                    color: #666;
-                "
-            >
-                {{ opts.verbose_name_plural }}
-            </span>
+            <div class="my_table_title" style="display: flex;">
 
-            <a href="export_all_excel/" target="_blank">
-               <button type="button" class="el-button el-button--default el-button--small"
+                <span
+                    style="
+                        font-weight: 700;
+                        margin: 5px 20px 20px 20px;
+                        /*margin-top: 10px;*/
+                        font-size: 20px!important;
+                        color: #666;
+                    "
+                >
+                    {{ opts.verbose_name_plural }}
+                </span>
 
-                        style="
-                        float: right;
-                        margin-bottom: 10px;
-                        margin-top: 10px;
-                        margin-right: 12px;"
+                <div class="my_buttons" style="margin-left: auto;margin-right: 5px;margin-top: 10px">
+                    {% if has_export_perm %}
+                    <a href="export_all_excel/" target="_blank">
+                       <button type="button" class="el-button el-button--default el-button--small"
 
-                       data-name="export_all_excel"><!----><!---->
-                    <span class="fas fa-download"></span>
-                    <span>
-                        全部导出
-                    </span>
-                </button>
-            </a>
+                                style="
+                                float: right;
+                                margin-right: 5px;"
 
-            <a href="import-csv/">
-                <button type="button" class="el-button el-button--default el-button--small"
+                               data-name="export_all_excel"><!----><!---->
+                            <span class="fas fa-download"></span>
+                            <span>
+                                全部导出
+                            </span>
+                        </button>
+                    </a>
+                    {% endif %}
 
-                        style="
-                        float: right;
-                        margin-bottom: 10px;
-                        margin-top: 10px;
-                        margin-right: 12px;"
+                    {% if has_import_perm %}
+                    <a href="import-csv/">
+                        <button type="button" class="el-button el-button--default el-button--small"
 
-                        data-name="export_as_csv">
-                    <i class="fas fa-upload"></i>
-                    <span>
-                        导入数据
-                    </span>
-                </button>
-            </a>
+                                style="
+                                float: right;
+                                margin-right: 10px;"
 
+                                data-name="export_as_csv">
+
+                            <i class="fas fa-upload"></i>
+                            <span>
+                                导入数据
+                            </span>
+                        </button>
+                    </a>
+                    {% endif %}
+
+                </div>
+
+            </div>
         </div>
-    </div>
+    {% endif %}
 {% endblock %}
 
