--- a/bddjango/templates/autoWiki.html
+++ b/bddjango/templates/autoWiki.html
@@ -43,7 +43,7 @@
 
 - 过滤字段
 {% if has_filter_fields %}
-> 默认精确检索. 模糊检索示例: `{{ '{{' }}字段名{{ '}}' }}__icontains=xxx`, 如`name__icontains=张`
+> 默认精确检索. 模糊检索示例: `{{ '{{' }}字段名{{ '}}' }}__contains=xxx`, 如`name__contains=张`
 {% endif %}
 {{ filter_fields__doc }}
 
